--- a/.github/workflows/quality-gate.yml
+++ b/.github/workflows/quality-gate.yml
@@ -93,7 +93,7 @@ jobs:
           path: artifacts
 
       - name: Comment PR summary
-        if: always()
+        if: always() && github.actor != 'dependabot[bot]'
         uses: actions/github-script@v7
         with:
           script: |
