chore: add repo metadata, PR template, and polish
- Add repository, homepage, bugs, keywords, author to package.json
- Add .editorconfig for cross-editor consistency
- Add .github/PULL_REQUEST_TEMPLATE.md
- Fix stale userAgent version in configs/default.json and README
- Add push-to-main trigger for CI badge accuracy
- Expand CONTRIBUTING.md with testing section and CoC link
- Fix exactOptionalPropertyTypes errors in auth integration
- Add ajv and ajv-formats for JSON schema validation in tests
- Fix non-null assertions in strict test files
- Switch Playwright waitUntil from networkidle to load

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://json.schemastore.org/github-workflow.json
 name: Deploy Pages
 
 on:
@@ -16,9 +17,6 @@ concurrency:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
