--- a/package.json
+++ b/package.json
@@ -2,6 +2,28 @@
   "name": "web-quality-gatekeeper",
   "version": "0.2.0",
   "description": "Quality gate CLI and GitHub Action for Playwright, axe-core, Lighthouse, and visual diffs.",
+  "author": "Jahrome907",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Jahrome907/web-quality-gatekeeper.git"
+  },
+  "homepage": "https://github.com/Jahrome907/web-quality-gatekeeper#readme",
+  "bugs": {
+    "url": "https://github.com/Jahrome907/web-quality-gatekeeper/issues"
+  },
+  "keywords": [
+    "quality",
+    "accessibility",
+    "a11y",
+    "lighthouse",
+    "playwright",
+    "visual-regression",
+    "github-action",
+    "axe-core",
+    "web-performance",
+    "ci"
+  ],
   "type": "module",
   "bin": {
     "wqg": "dist/cli.js"
@@ -13,6 +35,7 @@
   },
   "files": [
     "dist",
+    "schemas",
     "configs",
     "README.md",
     "LICENSE"
@@ -48,6 +71,8 @@
     "@types/pixelmatch": "^5.2.6",
     "@types/pngjs": "^6.0.5",
     "@vitest/coverage-v8": "^4.0.18",
+    "ajv": "^8.17.1",
+    "ajv-formats": "^3.0.1",
     "eslint": "^9.8.0",
     "prettier": "^3.3.3",
     "tsup": "^8.1.0",
