--- a/.github/workflows/quality-gate.yml
+++ b/.github/workflows/quality-gate.yml
@@ -92,10 +92,11 @@ jobs:
       - name: Run audit
         env:
           AUDIT_URL: ${{ steps.target.outputs.url }}
+          TARGET_MODE: ${{ steps.target.outputs.mode }}
         run: |
           EXTRA=""
-          if [ "$AUDIT_URL" == "https://example.com" ]; then
-            EXTRA="--no-fail-on-a11y"
+          if [ "$TARGET_MODE" != "demo" ]; then
+            EXTRA="--no-fail-on-a11y --no-fail-on-perf --no-fail-on-visual"
           fi
           npm run audit -- "$AUDIT_URL" \
             --config configs/default.json \
