--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,8 @@ test-results/
 .claude/
 .codex/
 .tmp-int-*
+
+# Lighthouse Chrome profile artifacts
+lighthouse.*/
+C\:
+C:\\Users\\*\\AppData\\Local\\lighthouse.*
